gitops/components/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-vault
  labels:
    app.kubernetes.io/part-of: banking-demo
    app.kubernetes.io/name: vault
    cluster: east
