gitops/components/vault/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: banking-vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: banking-demo
spec:
  to:
    kind: Service
    name: vault
  port:
    targetPort: 8200
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
